[gd_scene load_steps=2 format=3 uid="uid://g5ump6kiofk6"]

[ext_resource type="Script" path="res://scenes/weapon/weapon.gd" id="1_a8ayh"]

[node name="Weapon" type="Node2D"]
script = ExtResource("1_a8ayh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")

[node name="ProjectileSpawn" type="Node2D" parent="."]

[node name="FireDelay" type="Timer" parent="."]

[connection signal="timeout" from="FireDelay" to="." method="_on_fire_delay_timeout"]
